# sights-v2

./: .gitignore  VERSION  flake.nix  install.sh  package-lock.json  package.json
client/: .prettierrc  index.html  tailwind.config.js  tsconfig.json  vite.config.ts
client/public/: manifest.json
client/src/: App.tsx  index.css  index.tsx  useApi.ts
client/src/api/: AppClient.ts  index.ts
client/src/api/core/: OpenAPI.ts
client/src/api/models/: HTTPValidationError.ts  MoveArmServoParams.ts  MoveMotorsParams.ts  PostSettingsBody.ts  RestoreBackupBody.ts  SensorConfig.ts  SwitchConfigBody.ts
client/src/api/services/: DefaultService.ts
client/src/components/: Nav.tsx  SelectableCard.tsx  SpeedIndicator.tsx
client/src/components/overlays/: DocsPopup.tsx  LogPopup.tsx  TerminalPopup.tsx
client/src/components/ui/: Button.tsx  Loader.tsx  Nav.tsx  Popup.tsx
client/src/components/widget/: BackupHistoryMenu.tsx  BackupRestoreDialog.tsx  CameraStream.tsx  CircleGraph.tsx  ConfigSwitcher.tsx  ConfigSwitcherBasic.tsx  DiffViewer.tsx  LineGraphCard.tsx  NetworkDisplay.tsx  PixelGridCard.tsx  (+5 more)
client/src/hooks/: usePopup.tsx  useSystemInfo.tsx  useTheme.tsx
client/src/pages/: Index.tsx  Settings.tsx
docs/: index.md
docs/.vitepress/: config.mts
docs/install/: installer.md  manual.md  nixos.md
server/: README.md  pyproject.toml  requirements.txt  server.py  settings.toml  sights.service  ttyd.service
server/components/: arm.py
server/configs/: active.json  default.toml
server/sensors/: system_info.py
server/util/: hiwonderfirmata.py  serialfirmata.py
