[project]
name = "sights"
version = "2.0.0"
description = "A complete teleoperative robot control interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-servokit>=1.3.21",
    "fastapi~=0.98.0",
    "gunicorn>=23.0.0",
    "numpy>1.25.2",
    "opencv-python>=4.9.0.80",
    "psutil~=7.0.0",
    "pydantic~=1.10.9",
    "pyfirmata>=1.1.0",
    "scikit-image~=0.25.2",
    "setuptools~=68.0",
    "simplejpeg~=1.8.2",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.35.0",
]
